# scout_apm_python

./: .gitignore  .pre-commit-config.yaml  .python-version  .travis.yml  CHANGELOG.md  DEVELOPMENT.md  LICENSE  MANIFEST.in  Makefile  README  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yml  release.yml
apm/: __init__.py  middleware.py  monkey.py  stacktracer.py  tracked_request.py
apm/django/: signals.py
apm/instruments/: sql.py  template.py  view.py
apm/samplers/: cpu.py  memory.py
ci/: cibuildwheel.sh  cibuildwheel_setup.sh
docs/: Makefile  conf.py  index.rst  make.bat
scout_apm/: __init__.py  commands.py  context.py  core_agent_manager.py  middleware.py  socket.py  stacktracer.py  tracked_request.py
scout_apm/config/: config.py  yaml_file.py
scout_apm/django/: signals.py
scout_apm/instruments/: sql.py  template.py  view.py
scout_apm/samplers/: cpu.py  memory.py  samplers.py
src/scout_apm/: __init__.py  bottle.py  celery.py  cherrypy.py  commands.py  compat.py  context.py  core_agent_manager.py  dramatiq.py  falcon.py  fastmcp.py  huey.py  hug.py  metadata.py  middleware.py  monkey.py  nameko.py  pyramid.py  request_manager.py  rq.py  socket.py  sqlalchemy.py  stacktracer.py  tortoise.py  tracked_request.py  wsgi.py
src/scout_apm/api/: __init__.py  context.py  tracing.py
src/scout_apm/asgi/: __init__.py
src/scout_apm/async/: __init__.py
src/scout_apm/async_/: api.py  channels.py  starlette.py
src/scout_apm/bottle/: __init__.py
src/scout_apm/celery/: __init__.py
src/scout_apm/cli/: core_agent_manager.py
src/scout_apm/config/: config.py  yaml_file.py
src/scout_apm/core/: __init__.py  _objtrace.c  backtrace.py  call_set.py  commands.py  config.py  context.py  core_agent_manager.py  error.py  error_service.py  git_revision.py  ignore.py  instrument_manager.py  metadata.py  monkey.py  n_plus_one_call_set.py  n_plus_one_tracker.py  objtrace.py  socket.py  (+13 more)
src/scout_apm_django/: __init__.py  apps.py  config.py
tests/: compat.py  config_test.py  conftest.py  tools.py
tests/integration/: __init__.py  app.py  bottle_app.py  celery_app.py  django_app.py  flask_app.py  pyramid_app.py  test_api.py  test_api_py36plus.py  test_asgi_py36plus.py  test_bottle.py  test_celery.py  test_cherrypy.py  test_django.py  test_django_channels_py36plus.py  test_django_huey.py  test_dramatiq.py  test_falcon.py  test_fastmcp.py  test_flask.py  test_flask_sqlalchemy.py  test_huey.py  test_hug.py  test_instruments.py  test_nameko.py  test_pyramid.py  test_rq.py  test_sqlalchemy.py  test_starlette.py  test_starlette_py36plus.py  test_tortoise.py  test_wsgi.py  util.py
tests/scout_apm_django_tests/: apps_test.py
tests/scout_apm_tests/: backtrace_test.py  commands_test.py  config_test.py  git_revision_test.py  instrument_manager_test.py  n_plus_one_call_set_test.py  objtrace_test.py  remote_ip_test.py  traceback_test.py  tracked_request_test.py
tests/unit/: test_compat.py  test_core.py  test_fastmcp.py
(+98 files in other folders)
